--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,13 @@
-<%- include("partials/header") %> 
+<%- include("partials/header") %>
 
-<h1>Home</h1>
-<p><%= homeContent %> </p>
+    <h1>Home</h1>
+    <p>
+        <%= homeContent %>
+    </p>
 
-<% for (var i=0;i<posts.length;i++) { %> 
-<%  console.log(posts[i].title); %> 
-<% } %> 
+    <% posts.forEach((post)=> {%>
+        <h1><%= post.title %> </h1>
+        <p><%= post.post.substring(0,100)+"..."  %> <a href="/posts/<%= post.title%> ">Read more</a></p>
+            <% }); %>
 
-<%- include("partials/footer") %> 
+<%- include("partials/footer") %>
